@@ -1,5 +1,6 @@
 /*
  * Copyright (c) 2004, 2005 Topspin Communications.  All rights reserved.
+ * Copyright (c) 2006 Cisco Systems.  All rights reserved.
  *
  * This software is available to you under a choice of one of two
  * licenses.  You may choose to be licensed under the terms of the GNU
@@ -62,6 +63,12 @@ struct mthca_create_cq {
 struct mthca_create_cq_resp {
 	struct ibv_create_cq_resp	ibv_resp;
 	__u32				cqn;
+	__u32				reserved;
+};
+
+struct mthca_resize_cq {
+	struct ibv_resize_cq		ibv_cmd;
+	__u32				lkey;
 	__u32				reserved;
 };
 
