@@ -1,3 +1,10 @@
+2006-01-26  Roland Dreier  <rdreier@cisco.com>
+
+	* src/mthca.h, src/verbs.c, src/cq.c, src/mthca.c: Add
+	implementation of resize CQ operation.
+
+	* src/mthca-abi.h: Add mthca-specific resize CQ ABI.
+
 2006-01-22  Roland Dreier  <rdreier@cisco.com>
 
 	* Release version 1.0-rc5.
